<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_for_full_experience">Sign in for full experience</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="wrong_password">Wrong password</string>
    <string name="or">OR</string>
    <string name="i_m_new_user">I\'m new user,\u0020</string>
    <string name="sign_up">Sign up</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="full_name">Full name</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="create_account">Create Account</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_is_too_short">Password must be at least 8 symbols long</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="google_signin_error">Something went wrong with logging into your Google account. Please sign in with your email and password or try again later</string>
    <string name="ok">OK</string>
    <string name="user_not_found">User not found</string>
    <string name="play_services_unavailable">Play services are unavailable on this device.</string>
    <string name="password_is_blank">Password is blank</string>
    <string name="missing_uppercase_letter">Password must contain an uppercase letter</string>
    <string name="missing_number">Password must contain a number</string>
    <string name="missing_lowercase_letter">Password must contain a lowercase letter</string>
</resources>
